# firmware

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  memmap_custom.ld
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: build_nightly.yml
database/: CMakeLists.txt  parse_gc.py
doc/: Unlock.md
doc/mcp/: memcardpro.txt
ext/: CMakeLists.txt
ext/ESP8266SdFatWrapper/include/: sd.h
ext/ESP8266SdFatWrapper/src/: sd.cpp
misc/: splashgen.html  style.css  uf2.js  variants.cmake
src/: bigmem.h  card_config.c  card_config.h  config.h  debug.c  debug.h  flashmap.h  gc.c  gc.h  gui.c  gui.h  input.c  main.c  oled.c  settings.c  settings.h  splash.c  splash.h  ui_menu.c  util.c  util.h
src/game_db/: game_db.c  game_db.h
src/gc/: CMakeLists.txt  gc_cardman.c  gc_cardman.h  gc_dirty.c  gc_dirty.h
src/gc/card_emu/: gc_mc_data_interface.c  gc_mc_data_interface.h  gc_mc_internal.h  gc_mc_spi.pio  gc_memory_card.c  gc_memory_card.h  gc_unlock.c  gc_unlock.h
src/gc/mmceman/: gc_mmceman.c  gc_mmceman.h  gc_mmceman_block_commands.c  gc_mmceman_block_commands.h
src/psram/: CMakeLists.txt  pio_qspi.c  psram.c
src/sdcard/: CMakeLists.txt  hw_config.c  sd.c  sd.h
src/version/: CMakeLists.txt  script.cmake  version.h
src/version/template/: version.c
